--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="app-signup">
-  <mat-card class="app-signup__card row">
+  <mat-card class="app-signup__card">
     <div class="app-signup__card--inside">
       <form [formGroup]="registerForm">
         <h1>Rejestracja</h1>
