--- a/frontend/src/app/components/signup/signup.component.scss
+++ b/frontend/src/app/components/signup/signup.component.scss
@@ -85,80 +85,56 @@
   }
 }
 
-// @media (max-width: 992px) {
-//   .app-signup {
-//     width: auto;
-//     height: auto;
-//     .app-signup__card {
-//       width: 600px;
-//       height: 900px;
-//       margin-top: 90px;
-//       margin-bottom: 40px;
-//       .app-signup__card--left {
-//         width: 600px;
-//       }
-//       .app-signup__card--right {
-//         width: 600px;
-//       }
-//     }
-//   }
-// }
+@media (max-width: 992px) {
+  .app-signup {
+    width: 100%;
+    height: 100vh;
+    .app-signup__card {
+      width: 750px;
+      margin-top: 150px;
+      height: auto;
+      .app-signup__card--inside {
+        width: 750px;
+      }
+    }
+  }
+}
 
-// @media (max-width: 768px) {
-//   .app-signup {
-//     .app-signup__card {
-//       width: 500px;
-//       height: 900px;
-//       .app-signup__card--left {
-//         width: 500px;
-//       }
-//       .app-signup__card--right {
-//         width: 500px;
-//       }
-//     }
-//   }
-// }
+@media (max-width: 768px) {
+  .app-signup {
+    width: 100%;
+    height: 100vh;
+    .app-signup__card {
+      width: 550px;
+      .app-signup__card--inside {
+        width: 550px;
+      }
+    }
+  }
+}
 
-// @media (max-width: 576px) {
-//   .app-signup {
-//     .app-signup__card {
-//       width: 300px;
-//       height: 900px;
-//       .app-signup__card--left {
-//         width: 300px;
-//         .app-signup__card--input {
-//           width: 250px;
-//         }
-//         h1 {
-//           font-size: 25px;
-//         }
-//         .app-signup__card--login-button {
-//           button {
-//             padding: 13px 0;
-//             width: 150px;
-//             font-size: 10px;
-//           }
-//         }
-//       }
-//       .app-signup__card--right {
-//         width: 300px;
-//         h1 {
-//           font-size: 20px;
-//         }
-
-//         p {
-//           font-size: 10px;
-//         }
-
-//         h2 {
-//           font-size: 15px;
-//         }
-//         .app-signup__card--register-button {
-//           padding: 13px 0;
-//           width: 150px;
-//           font-size: 10px;
-//         }
-//       }
-//     }
-//   }
-// }
+@media (max-width: 576px) {
+  .app-signup {
+    width: 100%;
+    height: 100vh;
+    .app-signup__card {
+      width: 300px;
+      .app-signup__card--inside {
+        width: 300px;
+        .app-signup__card--input {
+          width: 250px;
+        }
+        h1 {
+          font-size: 25px;
+        }
+        .app-signup__card--register-button {
+          button {
+            padding: 13px 0;
+            width: 150px;
+            font-size: 10px;
+          }
+        }
+      }
+    }
+  }
+}
