--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="app-navbar" color="primary">
+<mat-toolbar class="app-navbar">
   <span>
     <a class="app-navbar__logo" routerLink="/">DietComposer</a>
   </span>
