--- a/frontend/src/app/components/signin/signin.component.scss
+++ b/frontend/src/app/components/signin/signin.component.scss
@@ -1,5 +1,10 @@
+$signin-background-color: #f2f4f7;
+$signin-right-card-background-color: #f7f6e6;
+$signin-text-main-color: #616159;
+$register-button-color: white;
+
 .app-signin {
-  background-color: #f2f4f7;
+  background-color: $signin-background-color;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +30,7 @@
         font-size: 40px;
         text-transform: uppercase;
         font-weight: bold;
-        color: #022375;
+        color: $signin-text-main-color;
         padding-bottom: 50px;
         margin-top: 0;
         position: relative;
@@ -68,11 +73,11 @@
           font-size: 14px;
           cursor: pointer;
           transition: 0.5s ease-in-out;
-          background-color: #497af5;
-          color: white;
+          background-color: $signin-right-card-background-color;
+          color: $signin-text-main-color;
 
           &:hover {
-            background-color: rgba(73, 122, 245, 0.9);
+            background-color: rgba($signin-right-card-background-color, 0.9);
             transform: scale(1.01);
             -webkit-box-shadow: -4px 6px 18px -5px rgba(161, 165, 206, 1);
             -moz-box-shadow: -4px 6px 18px -5px rgba(161, 165, 206, 1);
@@ -89,9 +94,9 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      background-color: rgba(73, 122, 245, 0.8);
+      background-color: $signin-right-card-background-color;
       margin-top: 0;
-      color: white;
+      color: $signin-text-main-color;
       text-align: center;
 
       h1 {
@@ -119,10 +124,10 @@
         font-size: 14px;
         cursor: pointer;
         transition: 0.5s ease-in-out;
-        background-color: white;
-        color: #022375;
+        background-color: $register-button-color;
+        color: $signin-text-main-color;
         &:hover {
-          background-color: rgba(255, 255, 255, 0.9);
+          background-color: rgba($register-button-color, 0.7);
           transform: scale(1.01);
           -webkit-box-shadow: -4px 6px 18px -5px rgba(205, 205, 205, 1);
           -moz-box-shadow: -4px 6px 18px -5px rgba(205, 205, 205, 1);
