--- a/frontend/src/app/components/signup/signup.component.scss
+++ b/frontend/src/app/components/signup/signup.component.scss
@@ -1,5 +1,9 @@
+$signup-background-color: #f2f4f7;
+$signup-text-main-color: #616159;
+$signup-button-color: #f7f6e6;
+
 .app-signup {
-  background-color: #f2f4f7;
+  background-color: $signup-background-color;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,7 +30,7 @@
         font-size: 40px;
         text-transform: uppercase;
         font-weight: bold;
-        color: #022375;
+        color: $signup-text-main-color;
         padding-bottom: 50px;
         margin-top: 0;
         position: relative;
@@ -69,11 +73,11 @@
           font-size: 14px;
           cursor: pointer;
           transition: 0.5s ease-in-out;
-          background-color: #497af5;
-          color: white;
+          background-color: $signup-button-color;
+          color: $signup-text-main-color;
 
           &:hover {
-            background-color: rgba(73, 122, 245, 0.9);
+            background-color: rgba($signup-button-color, 0.9);
             transform: scale(1.01);
             -webkit-box-shadow: -4px 6px 18px -5px rgba(161, 165, 206, 1);
             -moz-box-shadow: -4px 6px 18px -5px rgba(161, 165, 206, 1);
