--- a/frontend/src/app/components/signup/signup.component.scss
+++ b/frontend/src/app/components/signup/signup.component.scss
@@ -23,7 +23,7 @@ $signup-button-color: #f7f6e6;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 20px;
+      padding: 60px 20px;
 
       h1 {
         text-align: center;
