--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -1,6 +1,6 @@
 <div class="app-signin">
   <mat-card class="app-signin__card row">
-    <div class="app-signin__card--left col-lg-12 col-md-12 col-sm-12">
+    <div class="app-signin__card--login col-lg-12 col-md-12 col-sm-12">
       <form [formGroup]="loginForm">
         <h1>Logowanie</h1>
         <div>
@@ -54,7 +54,7 @@
         </div>
       </form>
     </div>
-    <div class="app-signin__card--right col-lg-12 col-md-12 col-sm-12">
+    <div class="app-signin__card--register col-lg-12 col-md-12 col-sm-12">
       <h1>Zarządzaj swoją dietą w prosty i szybki sposób!</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
