--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -1,11 +1,14 @@
 <div class="app-products">
   <mat-card class="app-products__card">
     <div class="app-products__card--insert-products">
-      <h1>Wprowadz produkty</h1>
+      <h1>Wprowadź produkty</h1>
       <p>na ich podstawie zostanął dobrane przepisy.</p>
       <form [formGroup]="productForm">
         <div>
-          <mat-form-field appearance="outline">
+          <mat-form-field
+            appearance="outline"
+            class="app-products__card--input"
+          >
             <mat-label>Produkt</mat-label>
             <input
               (focus)="checkProductExist()"
@@ -26,18 +29,66 @@
               </mat-option>
             </mat-autocomplete>
             <mat-icon matSuffix>search</mat-icon>
+            <mat-hint *ngIf="productIsChosen"
+              ><span class="mat-error"
+                >Produkt został już wprowadzony!</span
+              ></mat-hint
+            >
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field appearance="outline" class="app-signin__card--input">
+          <mat-form-field
+            appearance="outline"
+            class="app-products__card--input"
+          >
             <mat-label>Ilość</mat-label>
             <input matInput type="number" formControlName="quantity" />
             <span matSuffix>{{ inputMeasureUnit }}</span>
           </mat-form-field>
         </div>
       </form>
-      <button (click)="add()">dodaj</button>
+      <div>
+        <button
+          [disabled]="!chosenProductDataAreCorrect"
+          (click)="addProduct()"
+          color="primary"
+          mat-mini-fab
+        >
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
     </div>
-    <div class="app-products__card--products-list"></div>
+    <div class="app-products__card--products">
+      <div
+        class="app-products__card--empty-list"
+        *ngIf="!chosenProducts.length"
+      >
+        <h2>Nie wprowadzono produktów.</h2>
+      </div>
+      <div *ngIf="chosenProducts.length">
+        <h2>Twoje produkty:</h2>
+        <div
+          (cdkDropListDropped)="drop($event)"
+          cdkDropList
+          class="app-products__card--products-list-box"
+        >
+          <div
+            *ngFor="let product of chosenProducts; let i = index"
+            cdkDrag
+            class="app-products__card--products-list"
+          >
+            <span class="app-products__card--name-span">{{
+              product.name
+            }}</span>
+            <span class="app-products__card--quantity-span"
+              >{{ product.quantity }} {{ product.measureUnit }}</span
+            >
+            <button (click)="deleteProduct(i)" mat-button>
+              <mat-icon class="app-products__card--delete-icon">close</mat-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </mat-card>
 </div>
