--- a/frontend/src/app/components/products/products.component.scss
+++ b/frontend/src/app/components/products/products.component.scss
@@ -1,4 +1,6 @@
 $products-background-color: #f2f4f7;
+$products-text-main-color: #616159;
+$products-delete-icon-color: #ab1818;
 
 .app-products {
   background-color: $products-background-color;
@@ -12,8 +14,90 @@ $products-background-color: #f2f4f7;
     display: flex;
     padding: 0;
     margin-top: 75px;
-    width: 900px;
+    width: 1200px;
     height: 600px;
+
+    .app-products__card--insert-products {
+      width: 500px;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: $products-text-main-color;
+
+      h1 {
+        font-size: 30px;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+
+      p {
+        font-size: 15px;
+        padding: 0 15px;
+        padding-bottom: 30px;
+      }
+
+      .app-products__card--input {
+        width: 300px;
+      }
+    }
+
+    .app-products__card--products {
+      width: 700px;
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h2 {
+        color: $products-text-main-color;
+        font-size: 25px;
+      }
+
+      .app-products__card--empty-list {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .app-products__card--products-list-box {
+        width: 600px;
+        max-width: 100%;
+        max-height: 460px;
+        border: solid 1px #ccc;
+        min-height: 60px;
+        display: block;
+        background: white;
+        border-radius: 4px;
+        overflow: auto;
+      }
+
+      .app-products__card--products-list {
+        padding: 20px 10px;
+        border-bottom: solid 1px #ccc;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        cursor: move;
+
+        .app-products__card--name-span {
+          width: 200px;
+          font-size: 15px;
+          font-weight: 500;
+        }
+        .app-products__card--quantity-span {
+          width: 150px;
+          font-size: 15px;
+        }
+
+        .app-products__card--delete-icon {
+          color: $products-delete-icon-color;
+        }
+      }
+    }
   }
 }
 
