--- a/frontend/src/app/components/products/products.component.scss
+++ b/frontend/src/app/components/products/products.component.scss
@@ -13,9 +13,9 @@ $products-delete-icon-color: #ab1818;
   .app-products__card {
     display: flex;
     padding: 0;
-    margin-top: 75px;
     width: 1200px;
     height: 600px;
+    margin-top: 75px;
 
     .app-products__card--insert-products {
       width: 500px;
@@ -83,6 +83,10 @@ $products-delete-icon-color: #ab1818;
         justify-content: space-between;
         cursor: move;
 
+        &:hover {
+          background-color: $products-background-color;
+        }
+
         .app-products__card--name-span {
           width: 200px;
           font-size: 15px;
@@ -107,6 +111,135 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+/* disable for Firefox */
 input[type="number"] {
-  -moz-appearance: textfield; /* Firefox */
+  -moz-appearance: textfield;
+}
+
+@media (max-width: 1210px) {
+  .app-products {
+    width: 100%;
+    height: 100vh;
+    .app-products__card {
+      width: 950px;
+      height: 600px;
+
+      .app-products__card--insert-products {
+        width: 375px;
+      }
+
+      .app-products__card--products {
+        width: 575px;
+
+        .app-products__card--products-list-box {
+          width: 475px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .app-products {
+    width: auto;
+    height: auto;
+    .app-products__card {
+      width: 750px;
+      height: 100%;
+      margin-top: 90px;
+      margin-bottom: 20px;
+
+      .app-products__card--insert-products {
+        width: 750px;
+
+        .app-products__card--input {
+          width: 450px;
+        }
+      }
+
+      .app-products__card--products {
+        width: 750px;
+
+        h2 {
+          text-align: center;
+        }
+
+        .app-products__card--products-list-box {
+          width: 700px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .app-products {
+    .app-products__card {
+      width: 550px;
+
+      .app-products__card--insert-products {
+        width: 550px;
+
+        .app-products__card--input {
+          width: 400px;
+        }
+      }
+
+      .app-products__card--products {
+        width: 550px;
+
+        .app-products__card--products-list-box {
+          width: 500px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .app-products {
+    .app-products__card {
+      width: 300px;
+
+      .app-products__card--insert-products {
+        width: 300px;
+
+        .app-products__card--input {
+          width: 200px;
+        }
+
+        h1 {
+          font-size: 22px;
+        }
+
+        p {
+          font-size: 10px;
+        }
+      }
+
+      .app-products__card--products {
+        width: 300px;
+
+        h2 {
+          font-size: 20px;
+        }
+
+        .app-products__card--products-list-box {
+          width: 250px;
+        }
+
+        .app-products__card--products-list {
+          .app-products__card--name-span {
+            width: 100px;
+            font-size: 12px;
+          }
+
+          .app-products__card--quantity-span {
+            width: 50px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
 }
