--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -4,7 +4,7 @@
       class="app-products__card--insert-products col-lg-12 col-md-12 col-sm-12"
     >
       <h1>Wprowadź produkty</h1>
-      <p>na ich podstawie zostanął dobrane przepisy.</p>
+      <p>na ich podstawie zostaną dobrane przepisy.</p>
       <form [formGroup]="productForm">
         <div>
           <mat-form-field
