--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -70,7 +70,7 @@
           {{ error }}
         </div>
         <div class="app-signup__card--register-button">
-          <button (click)="register()">Zarejestruj się</button>
+          <button (click)="register()">ZAREJESTRUJ SIĘ</button>
         </div>
       </form>
     </div>
