--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -50,7 +50,7 @@
           {{ error }}
         </div>
         <div class="app-signin__card--login-button">
-          <button (click)="login()">Zaloguj się</button>
+          <button (click)="login()">ZALOGUJ SIĘ</button>
         </div>
       </form>
     </div>
