--- a/frontend/src/app/components/signin/signin.component.scss
+++ b/frontend/src/app/components/signin/signin.component.scss
@@ -101,6 +101,7 @@ $register-button-color: white;
 
       h1 {
         font-size: 25px;
+        text-transform: uppercase;
         font-weight: bold;
       }
 
@@ -110,6 +111,7 @@ $register-button-color: white;
       }
 
       h2 {
+        text-transform: uppercase;
         font-size: 20px;
         padding-top: 40px;
       }
