--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -25,7 +25,7 @@ $navbar-main-link-color: #616159;
     margin: 0;
 
     li {
-      margin: 30px;
+      margin: 25px;
       position: relative;
     }
 
@@ -33,7 +33,8 @@ $navbar-main-link-color: #616159;
       color: $navbar-main-link-color;
       text-decoration: none;
       text-transform: uppercase;
-      font-size: 15px;
+      font-size: 14px;
+      font-weight: 500;
       padding: 0 6px;
       cursor: pointer;
       transition: 0.5s ease-in-out;
