--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -1,7 +1,7 @@
 <div class="app-recipes">
-  <div class="app-recipes__container row">
+  <div class="app-recipes__container row row--without-wrap">
     <mat-expansion-panel
-      class="app-recipes__container--products-expansion-panel"
+      class="app-recipes__container--products-expansion-panel col-12 col-md-12 col-lg-4"
     >
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -34,19 +34,22 @@
         </div>
       </div>
     </mat-expansion-panel>
-    <div class="app-recipes__container--add-products">
-      <button class="app-recipes__container--button" routerLink="/products">
+    <div class="app-recipes__container--add-products col-6 col-md-6 col-lg-4">
+      <button class="app-recipes__container--add-button" routerLink="/products">
         Dodaj produkty
       </button>
     </div>
-    <div class="app-recipes__container--add-recipe">
-      <button class="app-recipes__container--button" routerLink="/add_recipe">
+    <div class="app-recipes__container--add-recipe col-6 col-md-6 col-lg-4">
+      <button
+        class="app-recipes__container--add-button"
+        routerLink="/add_recipe"
+      >
         Dodaj przepis
       </button>
     </div>
   </div>
-  <div class="app-recipes__container row">
-    <div class="app-recipes__container--filters">
+  <div class="app-recipes__container row row--without-wrap">
+    <div class="app-recipes__container--filters col-6 col-md-4 col-lg-4">
       <button
         (click)="openFiltersDialog('0ms', '0ms')"
         class="app-recipes__container--filters-button"
@@ -54,22 +57,57 @@
         <mat-icon>list</mat-icon> Filtry
       </button>
     </div>
-    <div class="app-recipes__container--selected-filters">
-      Tu będą wypisane filtry... albo i nie
+    <div
+      class="app-recipes__container--selected-filters col-6 col-md-4 col-lg-4"
+    >
+      tu będą wypisane wybrane filtry
     </div>
-    <div class="app-recipes__container--number-of-recipes">
-      Znaleziono przepisów: [tu bedzie jakas liczba]
+    <div
+      class="app-recipes__container--number-of-recipes col-12 col-md-4 col-lg-4"
+    >
+      Znaleziono przepisów: {{ recipes.length }}
     </div>
   </div>
   <div class="app-recipes__container row">
-    <div class="app-recipes__container--recipe">przepis</div>
+    <div
+      class="app-recipes__container--recipe col-12 col-md-6 col-lg-4"
+      *ngFor="let recipe of recipes"
+    >
+      <mat-card>
+        <img mat-card-image [src]="recipe.image" [alt]="recipe.name" />
+        <mat-card-content>
+          <mat-card-title>{{ recipe.name }}</mat-card-title>
+          <mat-card-subtitle>{{ recipe.description }}</mat-card-subtitle>
+        </mat-card-content>
+        <div class="app-recipes__container--recipe-footer">
+          <div class="app-recipes__container--recipe-summary">
+            <div class="app-recipes__container--recipe-summary-description">
+              <mat-icon>access_time</mat-icon>
+              <span>{{ recipe.cookingTime }}</span>
+            </div>
+            <div class="app-recipes__container--recipe-summary-description">
+              <mat-icon>person_outline</mat-icon>
+              <span>{{ recipe.portions }}</span>
+            </div>
+          </div>
+          <div class="app-recipes__container--recipe-show-button">
+            <button
+              [routerLink]="['/detail', recipe.id]"
+              class="app-recipes__container--show-button"
+            >
+              Zobacz
+            </button>
+          </div>
+        </div>
+      </mat-card>
+    </div>
   </div>
   <div class="app-recipes__container">
     <mat-paginator
       class="app-recipes__container--paginator"
-      [length]="100"
-      [pageSize]="25"
-      [pageSizeOptions]="[5, 10, 15, 25]"
+      [length]="recipes.length"
+      [pageSize]="12"
+      [pageSizeOptions]="[12, 24, 36, 48]"
       (page)="onChangedPage($event)"
     ></mat-paginator>
   </div>
