--- a/frontend/src/app/components/recipes/recipes.component.scss
+++ b/frontend/src/app/components/recipes/recipes.component.scss
@@ -1,10 +1,10 @@
-//$products-background-color: #f2f4f7;
-$products-background-color: #fafafa;
-$products-delete-icon-color: #ab1818;
+//$recipes-background-color: #f2f4f7;
+$recipes-background-color: #fafafa;
+$recipes-delete-icon-color: #ab1818;
 $font-color: #616159;
 
 .app-recipes {
-  background-color: $products-background-color;
+  background-color: $recipes-background-color;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -13,8 +13,22 @@ $font-color: #616159;
   height: 100%;
   margin-top: 75px;
 
-  .row {
-    flex-wrap: nowrap;
+  .app-recipes__container--add-button {
+    width: 100%;
+    padding: 14px 23px;
+    border-radius: 4px;
+    text-transform: uppercase;
+    color: $font-color;
+    background-color: white;
+    font-size: 13px;
+    font-weight: 500;
+    border: none;
+    background: none;
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+      0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  }
+  .app-recipes__container:nth-child(3) {
+    padding-top: 0;
   }
 
   .app-recipes__container {
@@ -27,18 +41,19 @@ $font-color: #616159;
 
       mat-panel-title {
         text-transform: uppercase;
+        color: $font-color;
         font-size: 13px;
         font-weight: 500;
+
+        .app-recipes__container--product-length {
+          padding-left: 10px;
+        }
       }
 
       mat-expansion-panel-header {
         &:hover {
           background-color: white;
         }
-      }
-
-      .app-recipes__container--product-length {
-        padding-left: 10px;
       }
 
       .app-recipes__container--products-list-box {
@@ -57,7 +72,7 @@ $font-color: #616159;
         justify-content: space-between;
 
         &:hover {
-          background-color: $products-background-color;
+          background-color: $recipes-background-color;
         }
 
         .app-recipes__container--name-span {
@@ -71,7 +86,7 @@ $font-color: #616159;
         }
 
         .app-recipes__container--delete-icon {
-          color: $products-delete-icon-color;
+          color: $recipes-delete-icon-color;
         }
       }
     }
@@ -94,12 +109,12 @@ $font-color: #616159;
       height: 48px;
     }
 
-    .app-recipes__container--button {
+    .app-recipes__container--show-button {
       width: 100%;
       border-radius: 5px;
       padding: 12px 23px;
-      background-color: $products-background-color;
-      border-color: #616159;
+      background-color: white;
+      border-color: $font-color;
       border-width: 1px;
       text-transform: uppercase;
       font-size: 13px;
@@ -121,6 +136,7 @@ $font-color: #616159;
         display: flex;
         align-items: center;
         font-weight: 500;
+        color: $font-color;
       }
     }
 
@@ -128,7 +144,9 @@ $font-color: #616159;
       width: 50%;
       text-align: center;
       vertical-align: middle;
+      font-weight: 500;
       line-height: 26px;
+      color: $font-color;
     }
 
     .app-recipes__container--number-of-recipes {
@@ -137,6 +155,153 @@ $font-color: #616159;
       vertical-align: middle;
       line-height: 26px;
       font-weight: 500;
+      color: $font-color;
+    }
+
+    .app-recipes__container--recipe {
+      padding: 15px;
+
+      mat-card {
+        mat-card-title {
+          color: $font-color;
+        }
+        mat-card-subtitle {
+          color: $font-color;
+        }
+      }
+
+      .app-recipes__container--recipe-footer {
+        display: flex;
+
+        .app-recipes__container--recipe-summary {
+          width: 50%;
+          color: $font-color;
+          font-weight: 00;
+          display: flex;
+          .app-recipes__container--recipe-summary-description {
+            width: 30%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          }
+        }
+
+        .app-recipes__container--recipe-show-button {
+          width: 50%;
+          text-align: center;
+        }
+      }
+    }
+
+    .app-recipes__container--paginator {
+      background-color: $recipes-background-color;
+      color: $font-color;
+      font-weight: 500;
+      font-size: 14px;
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .row--without-wrap {
+    flex-wrap: nowrap;
+  }
+}
+
+@media (max-width: 992px) {
+  .app-recipes {
+    .app-recipes__container {
+      .app-recipes__container--products-expansion-panel {
+        width: 100%;
+        margin-bottom: 15px;
+        padding: 0;
+      }
+
+      .app-recipes__container--add-products {
+        width: 49%;
+        padding: 0;
+        margin-right: 5px;
+      }
+
+      .app-recipes__container--add-recipe {
+        width: 49%;
+        padding: 0;
+        margin-left: 5px;
+      }
+
+      .app-recipes__container--filters {
+        width: 25%;
+      }
+
+      .app-recipes__container--selected-filters {
+        width: 46%;
+      }
+
+      .app-recipes__container--number-of-recipes {
+        width: 29%;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .app-recipes {
+    .app-recipes__container {
+      .app-recipes__container--filters {
+        width: 15%;
+      }
+
+      .app-recipes__container--selected-filters {
+        width: 85%;
+        text-align: right;
+      }
+
+      .app-recipes__container--number-of-recipes {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .app-recipes {
+    .app-recipes__container {
+      .app-recipes__container--add-products {
+        margin-right: 2px;
+      }
+
+      .app-recipes__container--add-recipe {
+        margin-left: 2px;
+      }
+    }
+  }
+}
+
+@media (max-width: 355px) {
+  .app-recipes {
+    .app-recipes__container--add-button {
+      height: 68px;
+    }
+    .app-recipes__container {
+      .app-recipes__container--recipe:nth-child(1) {
+        padding-top: 0;
+      }
+      .app-recipes__container--filters {
+        width: 100%;
+      }
+
+      .app-recipes__container--selected-filters {
+        width: 100%;
+        text-align: left;
+        margin-left: 7px;
+        padding-bottom: 10px;
+      }
+
+      .app-recipes__container--number-of-recipes {
+        width: 100%;
+        text-align: left;
+        margin-left: 7px;
+      }
     }
   }
 }
