--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -36,6 +36,9 @@
                 >Produkt został już wprowadzony!</span
               ></mat-hint
             >
+            <mat-hint *ngIf="productDoesntExist"
+              ><span class="mat-error">Wybierz produkt z listy!</span></mat-hint
+            >
           </mat-form-field>
         </div>
         <div>
@@ -51,7 +54,7 @@
       </form>
       <div>
         <button
-          [disabled]="!chosenProductDataAreCorrect"
+          [disabled]="!checkValidation()"
           (click)="addProduct()"
           color="primary"
           mat-mini-fab
