--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
@@ -1,5 +1,6 @@
 $recipe-detail-background-color: #fafafa;
 $font-color: #616159;
+$add-to-schedule-button-color: #f7f6e6;
 
 h2,
 h1,
@@ -32,12 +33,36 @@ h2 {
     .app-recipe-detail--image-container {
       height: 50%;
       padding: 15px;
+      position: relative;
 
       .app-recipe-detail--image {
         width: 100%;
         height: 450px;
         object-fit: cover;
         border-radius: 10px;
+      }
+
+      .app-recipe-detail--image-button {
+        position: absolute;
+        bottom: 0;
+        right: 1%;
+        border: none;
+        outline: none;
+        padding: 10px 0;
+        margin-top: 30px;
+        border-radius: 20px;
+        width: 35%;
+        font-weight: 500;
+        font-size: 1vw;
+        cursor: pointer;
+        transition: 0.5s ease-in-out;
+        background-color: $add-to-schedule-button-color;
+        color: $font-color;
+
+        &:hover {
+          background-color: $add-to-schedule-button-color;
+          transform: scale(1.01);
+        }
       }
     }
 
@@ -150,8 +175,12 @@ h2 {
   .app-recipe-detail {
     .app-recipe-detail__card {
       .app-recipe-detail--image-container {
+        margin-bottom: 20px;
         .app-recipe-detail--image {
           height: 500px;
+        }
+        .app-recipe-detail--image-button {
+          font-size: 2vw;
         }
       }
       .app-recipe-detail--nutrients-container {
