--- a/frontend/src/app/components/recipes/recipe-card/recipe-card.component.html
+++ b/frontend/src/app/components/recipes/recipe-card/recipe-card.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="app-recipe-card__container--recipe-show-button">
       <button
-        [routerLink]="['/detail', recipe.id]"
+        [routerLink]="['/recipes/detail', recipe.id]"
         class="app-recipe-card__container--show-button"
       >
         Zobacz
