--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -64,7 +64,10 @@
         velit esse cillum dolore eu fugiat nulla pariatur.
       </p>
       <h2>Nie masz konta? Zarejestruj się!</h2>
-      <button routerLink="/register" class="app-signin__card--register-button">
+      <button
+        routerLink="/login/register"
+        class="app-signin__card--register-button"
+      >
         REJESTRACJA
       </button>
     </div>
