--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
@@ -259,6 +259,9 @@ mat-checkbox {
         .app-recipe-detail--image {
           height: 300px;
         }
+        .app-recipe-detail--image-button {
+          font-size: 2.5vw;
+        }
       }
       .app-recipe-detail--products-container {
         height: 50%;
