--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -3,6 +3,7 @@
     <div
       class="app-products__card--insert-products col-lg-12 col-md-12 col-sm-12"
     >
+      <mat-icon class="app-products__card--product-icon"> fastfood</mat-icon>
       <h1>Wprowadź produkty</h1>
       <p>na ich podstawie zostaną dobrane przepisy.</p>
       <form [formGroup]="productForm">
