--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -67,7 +67,7 @@
       >
         <mat-checkbox
           [disabled]="checkDisabled(i)"
-          (click)="makeAsDone(i)"
+          (click)="makeStepAsDone(i)"
         ></mat-checkbox>
         <span
           *ngIf="recipeStep[i] === 'doing'"
