--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
@@ -58,7 +58,7 @@ mat-checkbox {
         border-radius: 20px;
         width: 35%;
         font-weight: 500;
-        font-size: 1vw;
+        font-size: 16px;
         cursor: pointer;
         transition: 0.5s ease-in-out;
         background-color: $add-to-schedule-button-color;
