--- a/frontend/src/app/components/schedule/schedule.component.html
+++ b/frontend/src/app/components/schedule/schedule.component.html
@@ -54,6 +54,7 @@
       class="app-schedule__card--details-container col-lg-4 col-md-12 col-sm-12"
     >
       <div class="app-schedule__card--details-header">
+        <mat-icon>trending_up</mat-icon>
         <h1>Statystyki dnia</h1>
       </div>
       <div class="app-schedule__card--detail">
