--- a/frontend/src/app/components/signin/signin.component.scss
+++ b/frontend/src/app/components/signin/signin.component.scss
@@ -1,4 +1,4 @@
-$signin-background-color: #f2f4f7;
+$signin-background-color: #fafafa;
 $signin-register-card-background-color: #f7f6e6;
 $signin-text-main-color: #616159;
 $register-button-color: white;
