--- a/frontend/src/app/components/signup/signup.component.scss
+++ b/frontend/src/app/components/signup/signup.component.scss
@@ -1,4 +1,4 @@
-$signup-background-color: #f2f4f7;
+$signup-background-color: #fafafa;
 $signup-text-main-color: #616159;
 $signup-button-color: #f7f6e6;
 
