--- a/frontend/src/app/components/schedule/schedule.component.scss
+++ b/frontend/src/app/components/schedule/schedule.component.scss
@@ -16,6 +16,7 @@ h1 {
 }
 mat-checkbox {
   padding: 0;
+  text-align: center;
 }
 
 .app-schedule {
@@ -44,6 +45,7 @@ mat-checkbox {
         flex-direction: column;
         padding: 15px 0;
         border-bottom: dotted 1px #ccc;
+        margin: 0;
 
         .app-schedule__card--meal-type-header {
           padding-bottom: 10px;
@@ -58,7 +60,6 @@ mat-checkbox {
           .app-schedule__card--recipe-image {
             width: 100px;
             height: 50px;
-            margin-right: 20px;
             cursor: pointer;
           }
 
@@ -89,6 +90,18 @@ mat-checkbox {
       padding: 45px 10px;
 
       .app-schedule__card--details-header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        mat-icon {
+          margin-right: 20px;
+          font-weight: 500;
+          font-size: 35px;
+          width: 35px;
+          height: 35px;
+        }
         h1 {
           text-transform: uppercase;
           font-weight: 500;
