dotted space between name and value in recipe-deta

--- a/frontend/src/app/components/account-settings/account-settings.component.html
+++ b/frontend/src/app/components/account-settings/account-settings.component.html
@@ -1,1 +1,3 @@
-<p>account-settings works!</p>
+<div class="app-account-settings">
+  <mat-card class="app-account-settings__card row">ddddd</mat-card>
+</div>
