--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -98,24 +98,28 @@
       <p>Podane wartości odpowiadają jednej porcji.</p>
       <div class="app-recipe-detail--nutrient-container">
         <span class="app-recipe-detail--nutrient-name">Kalorie: </span>
+        <span class="app-recipe-detail--nutrient-dotted"></span>
         <span class="app-recipe-detail--nutrient-value"
           >{{ recipe.calories }} kcal</span
         >
       </div>
       <div class="app-recipe-detail--nutrient-container">
         <span class="app-recipe-detail--nutrient-name">Węglowodany: </span>
+        <span class="app-recipe-detail--nutrient-dotted"></span>
         <span class="app-recipe-detail--nutrient-value"
           >{{ recipe.carbohydrates }} g</span
         >
       </div>
       <div class="app-recipe-detail--nutrient-container">
         <span class="app-recipe-detail--nutrient-name">Białko: </span>
+        <span class="app-recipe-detail--nutrient-dotted"></span>
         <span class="app-recipe-detail--nutrient-value"
           >{{ recipe.proteins }} g</span
         >
       </div>
       <div class="app-recipe-detail--nutrient-container">
         <span class="app-recipe-detail--nutrient-name">Tłuszcze: </span>
+        <span class="app-recipe-detail--nutrient-dotted"></span>
         <span class="app-recipe-detail--nutrient-value"
           >{{ recipe.fats }} g</span
         >
